k8s/postgres-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-client
spec:
  containers:
    - name: psql
      image: postgres:15
      command: ["sleep"]
      args: ["3600"]
  restartPolicy: Never
