k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-todo-service
spec:
  selector:
    app: fastapi-todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort   # Use LoadBalancer on AKS or cloud clusters
