k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 4.157.20.34.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-todo-service
                port:
                  number: 8000
